# docs/client/swagger.yaml
@@ -4,318 +4,25 @@ info:
   description: 'A REST interface for state queries, legacy transactions'
   version: 1.0.0
 paths:
-  '/ioux/iou/base_denoms/{base_denom}/ious':
+  /ioux/iou/iou_namespaces:
     get:
-      operationId: IouAllByBaseDenom
+      operationId: IouNamespaceAll
       responses:
         '200':
           description: A successful response.
           schema:
             type: object
             properties:
-              ious:
+              iou_namespaces:
                 type: array
                 items:
                   type: object
                   properties:
-                    namespace:
-                      type: string
-                    base_denom:
-                      type: string
-                    issuer:
+                    id:
                       type: string
                     admin:
                       type: string
-              pagination:
-                type: object
-                properties:
-                  next_key:
-                    type: string
-                    format: byte
-                    title: |-
-                      next_key is the key to be passed to PageRequest.key to
-                      query the next page most efficiently
-                  total:
-                    type: string
-                    format: uint64
-                    title: >-
-                      total is total number of results available if
-                      PageRequest.count_total
-
-                      was set, its value is undefined otherwise
-                description: >-
-                  PageResponse is to be embedded in gRPC response messages where
-                  the
-
-                  corresponding request message has used PageRequest.
-
-                   message SomeResponse {
-                           repeated Bar results = 1;
-                           PageResponse page = 2;
-                   }
-        default:
-          description: An unexpected error response.
-          schema:
-            type: object
-            properties:
-              error:
-                type: string
-              code:
-                type: integer
-                format: int32
-              message:
-                type: string
-              details:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    type_url:
-                      type: string
-                      description: >-
-                        A URL/resource name that uniquely identifies the type of
-                        the serialized
-
-                        protocol buffer message. This string must contain at
-                        least
-
-                        one "/" character. The last segment of the URL's path
-                        must represent
-
-                        the fully qualified name of the type (as in
-
-                        `path/google.protobuf.Duration`). The name should be in
-                        a canonical form
-
-                        (e.g., leading "." is not accepted).
-
-
-                        In practice, teams usually precompile into the binary
-                        all types that they
-
-                        expect it to use in the context of Any. However, for
-                        URLs which use the
-
-                        scheme `http`, `https`, or no scheme, one can optionally
-                        set up a type
-
-                        server that maps type URLs to message definitions as
-                        follows:
-
-
-                        * If no scheme is provided, `https` is assumed.
-
-                        * An HTTP GET on the URL must yield a
-                        [google.protobuf.Type][]
-                          value in binary format, or produce an error.
-                        * Applications are allowed to cache lookup results based
-                        on the
-                          URL, or have them precompiled into a binary to avoid any
-                          lookup. Therefore, binary compatibility needs to be preserved
-                          on changes to types. (Use versioned type names to manage
-                          breaking changes.)
-
-                        Note: this functionality is not currently available in
-                        the official
-
-                        protobuf release, and it is not used for type URLs
-                        beginning with
-
-                        type.googleapis.com.
-
-
-                        Schemes other than `http`, `https` (or the empty scheme)
-                        might be
-
-                        used with implementation specific semantics.
-                    value:
-                      type: string
-                      format: byte
-                      description: >-
-                        Must be a valid serialized protocol buffer of the above
-                        specified type.
-                  description: >-
-                    `Any` contains an arbitrary serialized protocol buffer
-                    message along with a
-
-                    URL that describes the type of the serialized message.
-
-
-                    Protobuf library provides support to pack/unpack Any values
-                    in the form
-
-                    of utility functions or additional generated methods of the
-                    Any type.
-
-
-                    Example 1: Pack and unpack a message in C++.
-
-                        Foo foo = ...;
-                        Any any;
-                        any.PackFrom(foo);
-                        ...
-                        if (any.UnpackTo(&foo)) {
-                          ...
-                        }
-
-                    Example 2: Pack and unpack a message in Java.
-
-                        Foo foo = ...;
-                        Any any = Any.pack(foo);
-                        ...
-                        if (any.is(Foo.class)) {
-                          foo = any.unpack(Foo.class);
-                        }
-
-                     Example 3: Pack and unpack a message in Python.
-
-                        foo = Foo(...)
-                        any = Any()
-                        any.Pack(foo)
-                        ...
-                        if any.Is(Foo.DESCRIPTOR):
-                          any.Unpack(foo)
-                          ...
-
-                     Example 4: Pack and unpack a message in Go
-
-                         foo := &pb.Foo{...}
-                         any, err := ptypes.MarshalAny(foo)
-                         ...
-                         foo := &pb.Foo{}
-                         if err := ptypes.UnmarshalAny(any, foo); err != nil {
-                           ...
-                         }
-
-                    The pack methods provided by protobuf library will by
-                    default use
-
-                    'type.googleapis.com/full.type.name' as the type URL and the
-                    unpack
-
-                    methods only use the fully qualified type name after the
-                    last '/'
-
-                    in the type URL, for example "foo.bar.com/x/y.z" will yield
-                    type
-
-                    name "y.z".
-
-
-
-                    JSON
-
-                    ====
-
-                    The JSON representation of an `Any` value uses the regular
-
-                    representation of the deserialized, embedded message, with
-                    an
-
-                    additional field `@type` which contains the type URL.
-                    Example:
-
-                        package google.profile;
-                        message Person {
-                          string first_name = 1;
-                          string last_name = 2;
-                        }
-
-                        {
-                          "@type": "type.googleapis.com/google.profile.Person",
-                          "firstName": <string>,
-                          "lastName": <string>
-                        }
-
-                    If the embedded message type is well-known and has a custom
-                    JSON
-
-                    representation, that representation will be embedded adding
-                    a field
-
-                    `value` which holds the custom JSON in addition to the
-                    `@type`
-
-                    field. Example (for message [google.protobuf.Duration][]):
-
-                        {
-                          "@type": "type.googleapis.com/google.protobuf.Duration",
-                          "value": "1.212s"
-                        }
-      parameters:
-        - name: base_denom
-          in: path
-          required: true
-          type: string
-        - name: pagination.key
-          description: |-
-            key is a value returned in PageResponse.next_key to begin
-            querying the next page most efficiently. Only one of offset or key
-            should be set.
-          in: query
-          required: false
-          type: string
-          format: byte
-        - name: pagination.offset
-          description: >-
-            offset is a numeric offset that can be used when key is unavailable.
-
-            It is less efficient than using key. Only one of offset or key
-            should
-
-            be set.
-          in: query
-          required: false
-          type: string
-          format: uint64
-        - name: pagination.limit
-          description: >-
-            limit is the total number of results to be returned in the result
-            page.
-
-            If left empty it will default to a value to be set by each app.
-          in: query
-          required: false
-          type: string
-          format: uint64
-        - name: pagination.count_total
-          description: >-
-            count_total is set to true  to indicate that the result set should
-            include
-
-            a count of the total number of items available for pagination in
-            UIs.
-
-            count_total is only respected when offset is used. It is ignored
-            when key
-
-            is set.
-          in: query
-          required: false
-          type: boolean
-      tags:
-        - Query
-  /ioux/iou/ious:
-    get:
-      operationId: IouAll
-      responses:
-        '200':
-          description: A successful response.
-          schema:
-            type: object
-            properties:
-              ious:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    namespace:
-                      type: string
-                    base_denom:
-                      type: string
                     issuer:
-                      type: string
-                    admin:
                       type: string
               pagination:
                 type: object
@@ -582,26 +289,24 @@ paths:
           type: boolean
       tags:
         - Query
-  '/ioux/iou/ious/{id}':
+  '/ioux/iou/iou_namespaces/{id}':
     get:
       summary: 'this line is used by starport scaffolding # 2'
-      operationId: Iou
+      operationId: IouNamespace
       responses:
         '200':
           description: A successful response.
           schema:
             type: object
             properties:
-              iou:
+              iou_namepsace:
                 type: object
                 properties:
-                  namespace:
-                    type: string
-                  base_denom:
-                    type: string
-                  issuer:
+                  id:
                     type: string
                   admin:
+                    type: string
+                  issuer:
                     type: string
         default:
           description: An unexpected error response.
@@ -797,7 +502,6 @@ paths:
           in: path
           required: true
           type: string
-          format: uint64
       tags:
         - Query
   /ioux/iou/params:
@@ -1400,34 +1104,30 @@ definitions:
                   "@type": "type.googleapis.com/google.protobuf.Duration",
                   "value": "1.212s"
                 }
-  ioux.iou.Iou:
+  ioux.iou.IouNamespace:
     type: object
     properties:
-      namespace:
-        type: string
-      base_denom:
-        type: string
-      issuer:
+      id:
         type: string
       admin:
         type: string
+      issuer:
+        type: string
   ioux.iou.Params:
     type: object
-  ioux.iou.QueryAllIouByBaseDenomResponse:
+  ioux.iou.QueryAllIouNamespaceResponse:
     type: object
     properties:
-      ious:
+      iou_namespaces:
         type: array
         items:
           type: object
           properties:
-            namespace:
-              type: string
-            base_denom:
-              type: string
-            issuer:
+            id:
               type: string
             admin:
+              type: string
+            issuer:
               type: string
       pagination:
         type: object
@@ -1454,60 +1154,17 @@ definitions:
                    repeated Bar results = 1;
                    PageResponse page = 2;
            }
-  ioux.iou.QueryAllIouResponse:
+  ioux.iou.QueryGetIouNamespaceResponse:
     type: object
     properties:
-      ious:
-        type: array
-        items:
-          type: object
-          properties:
-            namespace:
-              type: string
-            base_denom:
-              type: string
-            issuer:
-              type: string
-            admin:
-              type: string
-      pagination:
+      iou_namepsace:
         type: object
         properties:
-          next_key:
-            type: string
-            format: byte
-            title: |-
-              next_key is the key to be passed to PageRequest.key to
-              query the next page most efficiently
-          total:
-            type: string
-            format: uint64
-            title: >-
-              total is total number of results available if
-              PageRequest.count_total
-
-              was set, its value is undefined otherwise
-        description: |-
-          PageResponse is to be embedded in gRPC response messages where the
-          corresponding request message has used PageRequest.
-
-           message SomeResponse {
-                   repeated Bar results = 1;
-                   PageResponse page = 2;
-           }
-  ioux.iou.QueryGetIouResponse:
-    type: object
-    properties:
-      iou:
-        type: object
-        properties:
-          namespace:
-            type: string
-          base_denom:
-            type: string
-          issuer:
+          id:
             type: string
           admin:
+            type: string
+          issuer:
             type: string
   ioux.iou.QueryParamsResponse:
     type: object
