# x/iou/types/genesis.pb.go
@@ -31,7 +31,7 @@ const _ = proto.GoGoProtoPackageIsVersion3 // please upgrade the proto package
 type GenesisState struct {
 	Params Params `protobuf:"bytes,1,opt,name=params,proto3" json:"params" yaml:"params"`
 	// this line is used by starport scaffolding # genesis/proto/state
-	Ious []*Iou `protobuf:"bytes,2,rep,name=ious,proto3" json:"ious,omitempty"`
+	IouNamespaces []*IouNamespace `protobuf:"bytes,2,rep,name=iou_namespaces,json=iouNamespaces,proto3" json:"iou_namespaces,omitempty"`
 }
 
 func (m *GenesisState) Reset()         { *m = GenesisState{} }
@@ -74,9 +74,9 @@ func (m *GenesisState) GetParams() Params {
 	return Params{}
 }
 
-func (m *GenesisState) GetIous() []*Iou {
+func (m *GenesisState) GetIouNamespaces() []*IouNamespace {
 	if m != nil {
-		return m.Ious
+		return m.IouNamespaces
 	}
 	return nil
 }
@@ -88,25 +88,26 @@ func init() {
 func init() { proto.RegisterFile("iou/genesis.proto", fileDescriptor_c783d3433ff02072) }
 
 var fileDescriptor_c783d3433ff02072 = []byte{
-	// 285 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x5c, 0x8f, 0xb1, 0x4e, 0xc3, 0x30,
-	0x10, 0x86, 0x13, 0x40, 0x15, 0x4a, 0x89, 0x04, 0x11, 0x48, 0xa5, 0x83, 0xd3, 0x66, 0xea, 0x94,
-	0x53, 0xcb, 0x06, 0x03, 0x52, 0x17, 0xc4, 0x86, 0xca, 0xc6, 0x82, 0x9c, 0xc8, 0x18, 0x4b, 0x71,
-	0x2e, 0x8a, 0x6d, 0x94, 0xbc, 0x05, 0x8f, 0xd5, 0xb1, 0x23, 0x53, 0x85, 0x92, 0x37, 0xe0, 0x09,
-	0x50, 0xe2, 0x54, 0x48, 0x4c, 0xf6, 0x7f, 0xdf, 0x9d, 0xfd, 0x9d, 0x77, 0x21, 0xd0, 0x00, 0x67,
-	0x39, 0x53, 0x42, 0xc5, 0x45, 0x89, 0x1a, 0x83, 0x53, 0x81, 0xa6, 0x8a, 0x05, 0x9a, 0xe9, 0x25,
-	0x47, 0x8e, 0x7d, 0x11, 0xba, 0x9b, 0xe5, 0xd3, 0x6b, 0x8e, 0xc8, 0x33, 0x06, 0x7d, 0x4a, 0xcc,
-	0x1b, 0xd0, 0xbc, 0x1e, 0x50, 0xf8, 0x1f, 0x69, 0x21, 0x99, 0xd2, 0x54, 0x16, 0x43, 0x03, 0x49,
-	0x51, 0x49, 0x54, 0x90, 0x50, 0xc5, 0xe0, 0x63, 0x99, 0x30, 0x4d, 0x97, 0x90, 0xa2, 0xc8, 0x0f,
-	0x6f, 0x5b, 0xfe, 0x6a, 0x3f, 0xb5, 0x61, 0x40, 0x7e, 0x67, 0x2a, 0xd0, 0xd8, 0x18, 0x95, 0xde,
-	0xd9, 0x83, 0xd5, 0x7e, 0xd6, 0x54, 0xb3, 0xe0, 0xde, 0x1b, 0x15, 0xb4, 0xa4, 0x52, 0x4d, 0xdc,
-	0x99, 0xbb, 0x18, 0xaf, 0xce, 0xe3, 0xc3, 0x1a, 0xf1, 0x53, 0x5f, 0x5f, 0x5f, 0x6d, 0xf7, 0xa1,
-	0xf3, 0xb3, 0x0f, 0xfd, 0x9a, 0xca, 0xec, 0x36, 0xb2, 0xdd, 0xd1, 0x66, 0x18, 0x0b, 0xe6, 0xde,
-	0x89, 0x40, 0xa3, 0x26, 0x47, 0xb3, 0xe3, 0xc5, 0x78, 0xe5, 0xff, 0x8d, 0x3f, 0xa2, 0xd9, 0xf4,
-	0x68, 0x7d, 0xb7, 0x6d, 0x88, 0xbb, 0x6b, 0x88, 0xfb, 0xdd, 0x10, 0xf7, 0xb3, 0x25, 0xce, 0xae,
-	0x25, 0xce, 0x57, 0x4b, 0x9c, 0x97, 0x39, 0x17, 0xfa, 0xdd, 0x24, 0x71, 0x8a, 0x12, 0xb2, 0x34,
-	0x67, 0xb2, 0x33, 0xad, 0xa0, 0xea, 0x0e, 0xd0, 0x75, 0xc1, 0x54, 0x32, 0xea, 0xbd, 0x6f, 0x7e,
-	0x03, 0x00, 0x00, 0xff, 0xff, 0x21, 0x49, 0xfe, 0x99, 0x72, 0x01, 0x00, 0x00,
+	// 300 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x5c, 0x8f, 0xc1, 0x4a, 0xc3, 0x30,
+	0x1c, 0xc6, 0x1b, 0x85, 0x21, 0x9d, 0x13, 0x2d, 0x2a, 0x73, 0x87, 0x74, 0xf6, 0xb4, 0x53, 0xc3,
+	0xe6, 0x4d, 0x11, 0x61, 0x17, 0xf1, 0x22, 0x32, 0x6f, 0x5e, 0x46, 0x5a, 0x62, 0x0c, 0x34, 0xfd,
+	0x97, 0x25, 0x91, 0xf6, 0x25, 0xc4, 0xc7, 0xda, 0x71, 0x47, 0x4f, 0x43, 0xda, 0x37, 0xf0, 0x09,
+	0xa4, 0x4d, 0xab, 0xb0, 0x53, 0xf2, 0xfd, 0x7f, 0xff, 0x7c, 0xf9, 0x3e, 0xf7, 0x44, 0x80, 0x21,
+	0x9c, 0xa5, 0x4c, 0x09, 0x15, 0x66, 0x2b, 0xd0, 0xe0, 0x1d, 0x08, 0x30, 0x79, 0x28, 0xc0, 0x8c,
+	0x4e, 0x39, 0x70, 0x68, 0x86, 0xa4, 0xbe, 0x59, 0x3e, 0xba, 0xe0, 0x00, 0x3c, 0x61, 0xa4, 0x51,
+	0x91, 0x79, 0x25, 0x34, 0x2d, 0x5a, 0xe4, 0xef, 0x22, 0x2d, 0x24, 0x53, 0x9a, 0xca, 0xac, 0x5d,
+	0xc0, 0x31, 0x28, 0x09, 0x8a, 0x44, 0x54, 0x31, 0xf2, 0x3e, 0x8d, 0x98, 0xa6, 0x53, 0x12, 0x83,
+	0x48, 0x3b, 0x6f, 0xcb, 0x97, 0xf6, 0x53, 0x2b, 0x5a, 0x34, 0xa8, 0x93, 0x0a, 0x30, 0x56, 0x06,
+	0x1f, 0xc8, 0x3d, 0xbc, 0xb7, 0xb9, 0x9f, 0x35, 0xd5, 0xcc, 0xbb, 0x73, 0x7b, 0x19, 0x5d, 0x51,
+	0xa9, 0x86, 0x68, 0x8c, 0x26, 0xfd, 0xd9, 0x71, 0xd8, 0xf5, 0x08, 0x9f, 0x9a, 0xf9, 0xfc, 0x6c,
+	0xbd, 0xf5, 0x9d, 0x9f, 0xad, 0x3f, 0x28, 0xa8, 0x4c, 0xae, 0x03, 0xbb, 0x1d, 0x2c, 0xda, 0x67,
+	0xde, 0xad, 0x7b, 0x24, 0xc0, 0x2c, 0x53, 0x2a, 0x99, 0xca, 0x68, 0xcc, 0xd4, 0x70, 0x6f, 0xbc,
+	0x3f, 0xe9, 0xcf, 0xce, 0xff, 0x8d, 0x1e, 0xc0, 0x3c, 0x76, 0x78, 0x51, 0x07, 0xfa, 0x53, 0x6a,
+	0x7e, 0xb3, 0x2e, 0x31, 0xda, 0x94, 0x18, 0x7d, 0x97, 0x18, 0x7d, 0x56, 0xd8, 0xd9, 0x54, 0xd8,
+	0xf9, 0xaa, 0xb0, 0xf3, 0x72, 0xc9, 0x85, 0x7e, 0x33, 0x51, 0x18, 0x83, 0x24, 0x49, 0x9c, 0x32,
+	0x59, 0xd7, 0xc8, 0x49, 0x5e, 0x1f, 0x44, 0x17, 0x19, 0x53, 0x51, 0xaf, 0x29, 0x75, 0xf5, 0x1b,
+	0x00, 0x00, 0xff, 0xff, 0x73, 0x4a, 0x5b, 0x20, 0x8f, 0x01, 0x00, 0x00,
 }
 
 func (m *GenesisState) Marshal() (dAtA []byte, err error) {
@@ -129,10 +130,10 @@ func (m *GenesisState) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
-	if len(m.Ious) > 0 {
-		for iNdEx := len(m.Ious) - 1; iNdEx >= 0; iNdEx-- {
+	if len(m.IouNamespaces) > 0 {
+		for iNdEx := len(m.IouNamespaces) - 1; iNdEx >= 0; iNdEx-- {
 			{
-				size, err := m.Ious[iNdEx].MarshalToSizedBuffer(dAtA[:i])
+				size, err := m.IouNamespaces[iNdEx].MarshalToSizedBuffer(dAtA[:i])
 				if err != nil {
 					return 0, err
 				}
@@ -175,8 +176,8 @@ func (m *GenesisState) Size() (n int) {
 	_ = l
 	l = m.Params.Size()
 	n += 1 + l + sovGenesis(uint64(l))
-	if len(m.Ious) > 0 {
-		for _, e := range m.Ious {
+	if len(m.IouNamespaces) > 0 {
+		for _, e := range m.IouNamespaces {
 			l = e.Size()
 			n += 1 + l + sovGenesis(uint64(l))
 		}
@@ -254,7 +255,7 @@ func (m *GenesisState) Unmarshal(dAtA []byte) error {
 			iNdEx = postIndex
 		case 2:
 			if wireType != 2 {
-				return fmt.Errorf("proto: wrong wireType = %d for field Ious", wireType)
+				return fmt.Errorf("proto: wrong wireType = %d for field IouNamespaces", wireType)
 			}
 			var msglen int
 			for shift := uint(0); ; shift += 7 {
@@ -281,8 +282,8 @@ func (m *GenesisState) Unmarshal(dAtA []byte) error {
 			if postIndex > l {
 				return io.ErrUnexpectedEOF
 			}
-			m.Ious = append(m.Ious, &Iou{})
-			if err := m.Ious[len(m.Ious)-1].Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
+			m.IouNamespaces = append(m.IouNamespaces, &IouNamespace{})
+			if err := m.IouNamespaces[len(m.IouNamespaces)-1].Unmarshal(dAtA[iNdEx:postIndex]); err != nil {
 				return err
 			}
 			iNdEx = postIndex
